--- a/pom.xml
+++ b/pom.xml
@@ -54,5 +54,10 @@
       <artifactId>Java-WebSocket</artifactId>
       <version>1.5.1</version>
     </dependency>
+      <dependency>
+          <groupId>com.alibaba</groupId>
+          <artifactId>fastjson</artifactId>
+          <version>1.2.70</version>
+      </dependency>
   </dependencies>
 </project>
